--- a/.github/workflows/azure_gpu.yml
+++ b/.github/workflows/azure_gpu.yml
@@ -4,12 +4,17 @@ on: push
 
 # CONFIGURATION
 # For help, go to https://github.com/Azure/Actions
+
+# Set up a service principal using
 #
-# Set up the following secrets in your repository:
-#   AZURE_CREDENTIALS, REGISTRY_USERNAME, REGISTRY_PASSWORD, AZURE_DEVOPS_TOKEN
+# az login --tenant gerardjgormangmail.onmicrosoft.com
+# rg=$(az group create --location uksouth --name GpuCI --query id | xargs)
+# az ad sp create-for-rbac --name "http://GpuCI" --role contributor --scopes $rg --sdk-auth
+#
+# This will output some JSON which you should add to your GitHub repository as a secret called "AZURE_CREDENTIALS"
 # 2. Change these variables for your configuration:
 env:
-  AZURE_RESOURCE_GROUP: GpuTest   # set this to your Azure Resource group's name
+  AZURE_RESOURCE_GROUP: GpuCI   # set this to your Azure Resource group's name
 
 jobs:
   build-and-deploy-to-dev:
@@ -21,16 +26,6 @@ jobs:
     - uses: azure/login@v1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS  }}
-    # - uses: azure/docker-login@v1
-    #   with:
-    #     login-server: ${{ env.CONTAINER_REGISTRY }}
-    #     username: ${{ secrets.REGISTRY_USERNAME }}
-    #     password: ${{ secrets.REGISTRY_PASSWORD }}
-
-    # # Authentication
-    # - run: |
-    #     docker build . -t ${{ env.CONTAINER_REGISTRY }}/app:latest
-    #     docker push ${{ env.CONTAINER_REGISTRY }}/app:latest
 
     # Provision a new VM
     - name: Azure CLI script to create a new VM
