Added log messages

--- a/.github/workflows/azure_gpu.yml
+++ b/.github/workflows/azure_gpu.yml
@@ -15,6 +15,7 @@ on: push
 # 2. Change these variables for your configuration:
 env:
   AZURE_RESOURCE_GROUP: GpuCI   # set this to your Azure Resource group's name
+  # AZURE_VM_NAME: GpuVM-$GITHUB_SHA
   AZURE_VM_NAME: GpuVM
   # AZURE_VM_SIZE: NC6_Promo
   AZURE_VM_SIZE: Standard_DS2_v2
@@ -37,16 +38,14 @@ jobs:
       with:
         azcliversion: latest
         inlineScript: |
-          echo $GITHUB_WORKSPACE
-          ls -alh $GITHUB_WORKSPACE
-          ls -alh $GITHUB_WORKSPACE/.github/
-          ls -alh $GITHUB_WORKSPACE/.github/scripts
-          az account show
+          # az account show
+          # echo "Creating VM"
           # az vm create --name ${{ env.AZURE_VM_NAME }} --resource-group ${{ env.AZURE_RESOURCE_GROUP }} --image UbuntuLTS --size ${{ env.AZURE_VM_SIZE }} --admin-username gpuciadmin --generate-ssh-keys --ephemeral-os-disk true
+          # echo "Running remote script"
           # az vm run-command invoke --name ${{ env.AZURE_VM_NAME }} --resource-group ${{ env.AZURE_RESOURCE_GROUP }} --command-id RunShellScript --scripts $GITHUB_WORKSPACE/.github/scripts/azure_gpu.sh --parameters hello world
+          # echo "Deleting VM"
           # az vm delete --name ${{ env.AZURE_VM_NAME }} --resource-group ${{ env.AZURE_RESOURCE_GROUP }} --yes
-          # echo ${{ env.AZURE_VM_NAME }}NSG
-          # echo "${{ env.AZURE_VM_NAME }}NSG"
-          az network nsg delete --name ${{ env.AZURE_VM_NAME }}NSG --resource-group ${{ env.AZURE_RESOURCE_GROUP }}
+          echo "Deleting NSG"
+          az network nsg delete --name "${{ env.AZURE_VM_NAME }}NSG" --resource-group ${{ env.AZURE_RESOURCE_GROUP }}
 
 # az vm run-command invoke --name ${{ env.AZURE_VM_NAME }} --resource-group ${{ env.AZURE_RESOURCE_GROUP }} --command-id RunShellScript --scripts 'echo $1 $2' --parameters hello world
