Test with large output

--- a/.github/workflows/azure_gpu.yml
+++ b/.github/workflows/azure_gpu.yml
@@ -43,7 +43,9 @@ jobs:
           echo "Running remote script"
           ls -alh $GITHUB_WORKSPACE/.github/scripts/azure_gpu.sh
           chmod a+x $GITHUB_WORKSPACE/.github/scripts/azure_gpu.sh
-          az vm run-command invoke --name ${{ env.AZURE_VM_NAME }} --resource-group ${{ env.AZURE_RESOURCE_GROUP }} --command-id RunShellScript --scripts @$GITHUB_WORKSPACE/.github/scripts/azure_gpu.sh --parameters hello world
+          remote_output=$(az vm run-command invoke --name ${{ env.AZURE_VM_NAME }} --resource-group ${{ env.AZURE_RESOURCE_GROUP }} --command-id RunShellScript --scripts @$GITHUB_WORKSPACE/.github/scripts/azure_gpu.sh --parameters hello world)
+          echo $remote_output
+          echo $remote_output | grep '"message":'
           echo "Deleting VM"
           az vm delete --name ${{ env.AZURE_VM_NAME }} --resource-group ${{ env.AZURE_RESOURCE_GROUP }} --yes
           echo "Deleting VM NIC"
@@ -54,6 +56,19 @@ jobs:
           az network nsg delete --name ${{ env.AZURE_VM_NAME }}NSG --resource-group ${{ env.AZURE_RESOURCE_GROUP }}
           echo "Deleting VNet"
           az network vnet delete --name ${{ env.AZURE_VM_NAME }}VNET --resource-group ${{ env.AZURE_RESOURCE_GROUP }}
+
+
+***
+  "value": [
+    ***
+      "code": "ProvisioningState/succeeded",
+      "displayStatus": "Provisioning succeeded",
+      "level": "Info",
+      "message": "Enable succeeded: \n[stdout]\nIn azure_gpu.sh\n\nEnd azure_gpu.sh\n\n[stderr]\n",
+      "time": null
+    ***
+  ]
+***
 
 
 # az vm run-command invoke --name ${{ env.AZURE_VM_NAME }} --resource-group ${{ env.AZURE_RESOURCE_GROUP }} --command-id RunShellScript --scripts @{$GITHUB_WORKSPACE/.github/scripts/azure_gpu.sh} --parameters hello world
