--- a/.github/workflows/azure_gpu.yml
+++ b/.github/workflows/azure_gpu.yml
@@ -41,7 +41,8 @@ jobs:
       with:
         azure-resource-group: ${{ env.AZURE_RESOURCE_GROUP }}
         azure-vm-name: ${{ env.AZURE_VM_NAME }}
-        azure-vm-size: ${{ env.AZURE_VM_SIZE }}
+        # azure-vm-size: ${{ env.AZURE_VM_SIZE }}
+        azure-vm-size: ${{ env.HOME }}
 
     # Test outputs
     - name: Test outputs
