--- a/.github/workflows/azure_gpu.yml
+++ b/.github/workflows/azure_gpu.yml
@@ -47,9 +47,9 @@ jobs:
       id: createvm
       with:
         azure-credentials: ${{ secrets.AZURE_CREDENTIALS }}
-        azure-client-id: ${{ secrets.AZURE_CLIENT_ID }}
-        azure-client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
-        azure-tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+        # azure-client-id: ${{ secrets.AZURE_CLIENT_ID }}
+        # azure-client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
+        # azure-tenant-id: ${{ secrets.AZURE_TENANT_ID }}
         azure-resource-group: ${{ env.AZURE_RESOURCE_GROUP }}
         azure-vm-name: ${{ env.AZURE_VM_NAME }}
         azure-vm-size: ${{ env.AZURE_VM_SIZE }}
