--- a/.github/workflows/azure_gpu.yml
+++ b/.github/workflows/azure_gpu.yml
@@ -27,29 +27,12 @@ jobs:
     steps:
     - uses: actions/checkout@master
 
-    # # Authentication
-    # - name: Login to Azure CLI
-    #   uses: azure/login@v1
-    #   with:
-    #     azcliversion: latest
-    #     creds: ${{ secrets.AZURE_CREDENTIALS }}
-
-    # # Manually copy credentials for docker
-    # - name: Pass Azure credentials to docker
-    #   run: |
-    #     ls -alh /home/runner/
-
-    #        mkdir -p /home/runner/work/_temp/_github_home/.azure && cp -R /home/runner/.azure/* /home/runner/work/_temp/_github_home/.azure
-
     # Provision a new VM
     - name: Azure CLI script to create a new VM
       uses: ResearchSoftwareActions/azure-vm-deploy@master
       id: createvm
       with:
         azure-credentials: ${{ secrets.AZURE_CREDENTIALS }}
-        # azure-client-id: ${{ secrets.AZURE_CLIENT_ID }}
-        # azure-client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
-        # azure-tenant-id: ${{ secrets.AZURE_TENANT_ID }}
         azure-resource-group: ${{ env.AZURE_RESOURCE_GROUP }}
         azure-vm-name: ${{ env.AZURE_VM_NAME }}
         azure-vm-size: ${{ env.AZURE_VM_SIZE }}
@@ -63,7 +46,7 @@ jobs:
 # -v "/home/runner/work/_temp/_github_home":"/github/home"
 # -v "/home/runner/work/_temp/_github_workflow":"/github/workflow"
 # -v "/home/runner/work/devito/devito":"/github/workspace"
-# testin
+# testing
 
     # # Provision a new VM
     # - name: Azure CLI script to create a new VM
